deploy/k8s/base/deces-ui.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deces-ui
  labels:
    app.kubernetes.io/name: deces-ui
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: matchid
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: deces-ui
  ports:
    - name: http
      port: 8083
      targetPort: http
      protocol: TCP
