deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deces
  labels:
    app.kubernetes.io/name: matchid
    app.kubernetes.io/part-of: matchid
spec:
  ingressClassName: traefik
  rules:
    - host: deces.local
      http:
        paths:
          - path: /deces/api/v1
            pathType: Prefix
            backend:
              service:
                name: deces-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deces-ui
                port:
                  number: 8083
